bug-fix: fix word-wrap bug in code block line number when exporting PDF

--- a/src/resources/themes/v_moonlight/v_moonlight.css
+++ b/src/resources/themes/v_moonlight/v_moonlight.css
@@ -224,22 +224,23 @@ table.hljs-ln tr td {
 }
 
 table.hljs-ln tr td.hljs-ln-numbers {
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 
-	text-align: center;
-	color: #5C6370;
-	border-right: 1px solid #373E47;
-	vertical-align: top;
-	padding-right: 5px;
+    text-align: center;
+    color: #5C6370;
+    border-right: 1px solid #373E47;
+    vertical-align: top;
+    padding-right: 5px;
+    white-space: nowrap;
 }
 
 table.hljs-ln tr td.hljs-ln-code {
-	padding-left: 10px;
+    padding-left: 10px;
 }
 
 ::-webkit-scrollbar {
