--- a/src/resources/themes/v_pure/v_pure.css
+++ b/src/resources/themes/v_pure/v_pure.css
@@ -226,22 +226,23 @@ table.hljs-ln tr td {
 }
 
 table.hljs-ln tr td.hljs-ln-numbers {
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 
-	text-align: center;
-	color: #AAA;
-	border-right: 1px solid #CCC;
-	vertical-align: top;
-	padding-right: 5px;
+    text-align: center;
+    color: #AAA;
+    border-right: 1px solid #CCC;
+    vertical-align: top;
+    padding-right: 5px;
+    white-space: nowrap;
 }
 
 table.hljs-ln tr td.hljs-ln-code {
-	padding-left: 10px;
+    padding-left: 10px;
 }
 
 ::-webkit-scrollbar {
